k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: digital-kitchen-nodeport
  namespace: digital-kitchen
spec:
  selector:
    app: digital-kitchen
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30080
  type: NodePort
